Tested the built LED and burnning code through vsCode

--- a/firmware/esp32/platformio.ini
+++ b/firmware/esp32/platformio.ini
@@ -4,6 +4,7 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
+upload_port = /dev/ttyUSB0
 lib_deps =
   #adafruit/Adafruit VL53L0X @ ^1.0.4
   knolleary/PubSubClient @ ^2.8
