--- a/firmware/stm32/Debug/makefile
+++ b/firmware/stm32/Debug/makefile
@@ -92,8 +92,8 @@ all: main-build
 main-build: stm32.elf secondary-outputs
 
 # Tool invocations
-stm32.elf stm32.map: $(OBJS) $(USER_OBJS) /home/mohammedazab/myRepo/TriFlameX/firmware/stm32/STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-g++ -o "stm32.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"/home/mohammedazab/myRepo/TriFlameX/firmware/stm32/STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
+stm32.elf stm32.map: $(OBJS) $(USER_OBJS) C:\Users\sheem\Desktop\STM\Project\STM32BlazeRobot\firmware\stm32\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-g++ -o "stm32.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\sheem\Desktop\STM\Project\STM32BlazeRobot\firmware\stm32\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stm32.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
