added .settings to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ firmware/laptop_mainBrain/triflamex_ros2_pkg/install
 firmware/laptop_mainBrain/triflamex_ros2_pkg/log/
 firmware/laptop_mainBrain/triflamex_ros2_pkg/resource
 firmware/laptop_mainBrain/triflamex_ros2_pkg/test
+firmware/laptop_mainBrain/.venv/lib/*
+firmware/stm32/.settings/*
