--- a/firmware/esp32/platformio.ini
+++ b/firmware/esp32/platformio.ini
@@ -4,6 +4,6 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 upload_speed = 921600
-upload_port = /dev/ttyUSB0
+upload_port = COM5
 lib_deps =  
   knolleary/PubSubClient @ ^2.8
